trying to fix background not showing issue

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ header::after {
     width: 100%;
     height: 100%;
     min-height: 360px;
-    background-image: url(/images/tatazachod.jpg);
+    background-image: url(../images/tatazachod.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -269,7 +269,7 @@ main::after {
     width: 100%;
     height: 100%;
     min-height: 400px;
-    background-image: url(/images/galeria/IMG_20190922_152740.jpg);
+    background-image: url(../images/galeria/IMG_20190922_152740.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
